# BoostOS

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENHANCED_LOGGING.md  HARNESS_FEEDBACK.md  IMPLEMENTATION_COMPLETE.md  INPUT_LOGGING_STATUS.md  LICENSE  MANUAL_TESTING_GUIDE.md  QUICK_TEST.md  README.md  RELEASE_SECURITY.md  SECURITY.md  TODO  TODO.md  WORKFLOW_SYSTEM_COMPLETE.md  apply-migration.js  delete_empty_workflows.sql  electron-builder.yml  electron.vite.config.ts  package.json  query-db.js  tailwind.config.js  tsconfig.node.json
.github/: pull_request_template.md
docs/: editor-setup.md  phase1-foundation.md  (+4 more)
src/: pyproject.toml
src/boostos_fuse/: Cargo.toml
src/boostos_fuse/src/: commit.rs  diff.rs  inodes.rs  main.rs  overlay.rs  registry.rs
src/boostos_rag/: agent_cli.py  agent_ingest.py  agent_registry.py  api.py  chunker.py  cli.py  config.py  daemon.py  debug_panel.py  embedder.py  feature_cli.py  features.py  grep_wrap.py  indexer.py  proxy.py  proxy_db.py  stats_cli.py  store.py  trigram.py  watcher.py  wrap.py
src/main/: command-server.ts  config.ts  convex-bootstrap.ts  index.ts  project-activity.ts  project-classifier.ts  project-discovery.ts  project-hub-config.ts  project-runtime-llm.ts  ps-list-loader.ts  updater.ts  window-manager.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx
src/renderer/src/api/: ipc.ts
src/renderer/src/styles/: globals.css
src/renderer/src/utils/: shortcut.ts
src/renderer/ui/: style.css
src/shared/: project-hub.ts  types.ts
(+38 files in other folders)
