[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "boostos_rag"
version = "0.2.0"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers==3.4.1",
    "chromadb==0.6.3",
    "watchdog==6.0.0",
    "fastapi==0.115.0",
    "uvicorn[standard]==0.34.0",
    "click==8.1.8",
    "httpx==0.28.0",
]

[project.scripts]
boostos-search  = "boostos_rag.cli:search_cmd"
boostos-rag     = "boostos_rag.cli:rag_cmd"
boostos-proxy   = "boostos_rag.proxy:main"
boostos-stats   = "boostos_rag.stats_cli:main"
boostos-agent   = "boostos_rag.agent_cli:agent_cmd"
boostos-feature = "boostos_rag.feature_cli:feature_cmd"

[tool.setuptools.packages.find]
where = ["."]
include = ["boostos_rag*"]
