[package]
name = "boostos-overlay"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "boostos-overlay"
path = "src/main.rs"

[dependencies]
fuser = "0.14"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nix = { version = "0.29", features = ["fs", "process", "signal", "user"] }
libc = "0.2"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
